@@ -13,6 +13,7 @@ Alpha0.3.0
 - Added bail sign. 1st line: [Bail]
 - Fixed some messages not converted from their keys
 - Prisoners' gamemode will be set to 0 instead of 2
+- Added 'jail.modify.bypass' perm-node (detail in plugin.yml)
 
 Alpha0.2.3
 - Fixed '/votejail' command not working for normal players
